fix: fix title align

--- a/src/components/cards-slider/cards-slider.module.css
+++ b/src/components/cards-slider/cards-slider.module.css
@@ -99,6 +99,9 @@ ul {
   box-sizing: border-box;
   gap: 16px;
 }
+.title__container{
+  width: 100%;
+}
 
 .sliderMobile__title {
   margin: 0;
